# bulldb

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.js  database.go  docker-compose.yml  go.mod  models.go  models_test.go  performance.go  query.go  security.go  style.css  sync_versions.py  version.go
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
csharp/BullDB/: AI.cs  BullDB.csproj  Database.cs  Migration.cs  Models.cs  Observability.cs  Performance.cs  Query.cs  README.md  Security.cs  Types.cs
csharp/BullDB.Tests/: BullDB.Tests.csproj  ModelsTests.cs  UnitTest1.cs
docs/: architecture.md
docs_site/: app.js  index.html  style.css
golang/: README.md  go.mod
golang/bulldb/: README.md  ai.go  database.go  generator.go  go.mod  migration.go  models_test.go  observability.go  query.go  types.go
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
k8s/: deployment.yaml
python/: Dockerfile  README.md  pyproject.toml  requirements.txt
python/bulldb/: __init__.py  adapters.py  ai.py  database.py  generator.py  migration.py  models.py  observability.py  performance.py  query.py  security.py  types.py
python/tests/: test_database.py  test_models.py  test_query.py
rust/bulldb/: Cargo.toml  README.md
rust/bulldb/src/: ai.rs  lib.rs  observability.rs  performance.rs  security.rs  types.rs
rust/bulldb/tests/: models_test.rs
typescript/: Dockerfile  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: ai.ts  database.ts  generator.ts  index.ts  migration.ts  models.ts  observability.ts  performance.ts  query.ts  security.ts  types.ts
typescript/src/adapters/: auth.ts
typescript/tests/: models.test.ts  query.test.ts  tsconfig.json
versions/1.0.0/: README.md  diagrams.md  vision.md
