[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulldb"
version = "1.0.0"
description = "One Model. Every Database."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "httpx>=0.24.0",
    "redis>=5.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bulldb*"]
