[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulldb"
version = "1.0.0"
description = "One Model. Every Database. Advanced cross-language ORM/ODM supporting SQL, NoSQL, Vector, and Graph engines."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vikukumar"}
]
keywords = ["orm", "odm", "database", "sql", "nosql", "vector", "graph", "rag"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "httpx>=0.24.0",
    "redis>=5.0.0"
]

[project.urls]
Homepage = "https://bulldb.vikshro.in"
Repository = "https://github.com/vikukumar/bulldb.git"
Issues = "https://github.com/vikukumar/bulldb/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bulldb*"]
