[package]
name = "bulldb"
version = "1.0.0"
edition = "2021"
authors = ["Vikukumar"]
description = "One Model. Every Database. Advanced cross-language ORM/ODM supporting SQL, NoSQL, Vector, and Graph engines."
readme = "README.md"
license = "MIT"
repository = "https://github.com/vikukumar/bulldb"
homepage = "https://bulldb.vikshro.in"
keywords = ["orm", "database", "sql", "nosql", "vector"]
categories = ["database-implementations", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
aes = "0.8"
cfb-mode = "0.8"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
